--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ var currentScrollPos = window.pageYOffset;
 	<link rel="shortcut icon" type="image/x-icon" href="mylogo.ico" />
 </head>
   <body>
-  <div id="load_screen"><div id="loading">Loading Portfolio<div class="lds-dual-ring"></div></div></div>
+  <div id="load_screen"><div id="loading" style="font-size:150%;">Assembling myself<br><div class="lds-dual-ring"></div></div></div>
 	<header class="animated fadeIn">
 		<div class="logo">
 			<img src="logojr.png" alt="Logo" title="10 out of 10 logo" style="width:200px;">
@@ -72,6 +72,13 @@ var currentScrollPos = window.pageYOffset;
 			<a class="phone" href="resume.html">Portfolio</a>
 			<a class="phone" href="personality.html">About</a>
 			<a class="phone" href="history.html">His story</a>
+			<div class="b dropdown phone">Contact
+				<div class="b dropdown-content">
+					<a class="somee" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:33px; height:33px;" alt="Facebook" ></a>
+					<a class="somee" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:33px; height:33px;" alt="Instagram"></a>
+					<a class="somee" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:33px; height:33px;" alt="Email"></a>
+				</div>
+			</div>
 		</div>
 	</header>
 	<main>
@@ -87,8 +94,8 @@ var currentScrollPos = window.pageYOffset;
 				</div>
 				<div class="col-sm-5 animated fadeIn">
 					<h1>about me</h1>
-					<p class="about">I’m a student at Laurea university of applied sciences trying to grasp the title: Bachelor of Science in Information Technology.
-					I enjoy losing myself into extensive projects and basking in the glory of the finished task. 
+					<p class="about">I’m a student at Laurea university of applied sciences trying to grasp the title: Bachelor of Science in Information Technology.<br>
+					I enjoy losing myself into extensive projects and basking in the glory of the finished achievement. <br>
 					Outside studying my hobbies include gaming, laying around at home and skiing whenever the weather allows it. </p>
 				</div>
 				<div class="col-sm-4 animated fadeIn">
