--- a/resume.html
+++ b/resume.html
@@ -111,7 +111,7 @@ var currentScrollPos = window.pageYOffset;
 						<li>Olari upper secondary school</li>
 						<li>Certified in first aid</li>
 						<li>Hygiene passport</li>
-						<li>Language skills include rudiments in french and swedish</li>
+						<li>Language skills include rudiments in swedish and japanese</li>
 						<li class="txthid"><span class="hiddentxt">Bonus</span><span class="hiddenimg"><img src="wow1.png" alt="Ranking pelissä" width="300" /></span></li>
 					</ul>
 				</div>
@@ -129,7 +129,7 @@ var currentScrollPos = window.pageYOffset;
 	</main>
 	    <footer class="footerresume">
 		<div class="footerr">
-			<p>Portfolio Jaakko R</p>
+			<p style="color:grey">Portfolio Jaakko R</p>
 		</div>
 		</footer>
 		<nav class="navsome">
