--- a/personality.html
+++ b/personality.html
@@ -196,7 +196,7 @@ window.onload=changeImg;
 						<li>Not try to do everything myself</li>
 						<li>Teamwork skills</li>
 						<li>More realistic risk analysis (a falling meteor isn’t something that I need to account for)</li>
-						<li>Courage to go forth</li>	
+						<li>Remove my firewall when trying new things</li>	
 					</ul>
 					<button class="mgallery animated fadeInUp" onclick="myFunctionm()" id="myButtonm" value="Click To Open Instructions">Gallery</button>
 				</div>
@@ -219,7 +219,7 @@ window.onload=changeImg;
 	</main>
 	    <footer class="footerresume">
 		<div class="footerr">
-			<p>Portfolio Jaakko R</p>
+			<p style="color:grey">Portfolio Jaakko R</p>
 		</div>
 		</footer>
 		<nav class="navsome">
