--- a/history.html
+++ b/history.html
@@ -155,7 +155,7 @@ function myFunctionm() {
 	</main>
     <footer class="footerresume">
 		<div class="footer">
-			<p>Portfolio Jaakko R</p>
+			<p style="color:grey">Portfolio Jaakko R</p>
 		</div>
 	</footer>
 		<nav class="navsome">
