--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ var currentScrollPos = window.pageYOffset;
 	</main>
     <footer class="footerresume animated fadeIn">
 		<div class="footer">
-			<p>Portfolio Jaakko R</p>
+			<p style="color:grey">Portfolio Jaakko R</p>
 		</div>
 	</footer>
 	<nav class="navsome animated fadeIn">
