--- a/personality.html
+++ b/personality.html
@@ -177,7 +177,7 @@ window.onload=changeImg;
 				</div>
 				<div class="col-sm-9 animated fadeInUp">
 					<p>Most like writing about positive things first so here goes. What you first need to hear is that my personality is deeply rooted in logical and critical thinking.
-					Seeing the bigger picture, finding the most efficient solution and the way to get there has always been my strong point. Hand to hand with this is my capability to stay within schedule. 
+					Seeing the bigger picture, finding the most efficient solution and the way to get there has always been my strong point. Along with this is my capability to stay within schedule. 
 					Last time I was late going somewhere or with a schoolwork was probably during elementary 
 					school (so long ago don’t even remember what). My personality also consists of wanting to learn new things with an open mind and being unbiased. 
 					As for social skills I’m friendly and an excellent listener, but a stereotypical finnish person when it comes to opening my mouth. 
