--- a/history.html
+++ b/history.html
@@ -150,6 +150,8 @@ function myFunctionm() {
 		</div>
 		<video style="display:none" class="animated fadeIn" id="myDIV" controls>
 			<source src="my.mp4" type="video/mp4">
+			<source src="my.ogv" type="video/ogg">
+			<source src="my.webm" type="video/webm">
 			Your browser does not support HTML5 video.
 		</video>
 	</main>
